src/Dependencies/libtase2-2.3.0/src/inc/tase2_model.h

/**
 * \brief Represents a data set transfer set (DSTS) in the server
 */
typedef struct sTase2_DSTransferSet* Tase2_DSTransferSet;
/**
 * \brief Get the data set name of the transfer set
 *
 * The data set name is a string with the format:
 *
 * domain_name/data_set_name for domain scope data sets
 *
 * or
 *
 * data_set_name for VCC scope data sets
 *
 * NOTE: The returned value has to be released by the caller!
 *
 * \return a copy of the data set name or NULL
 */
TASE2_API char*
Tase2_DSTransferSet_getDataSetName(Tase2_DSTransferSet self);
/**
 * \brief Get the start time for condition monitoring of the transfer set
 *
 * \return start time in seconds sonce epoch (GMTBasedS)
 */
TASE2_API int32_t
Tase2_DSTransferSet_getStartTime(Tase2_DSTransferSet self);
/**
 * \brief Get the interval value (time interval between server reports)
 *
 * \return the interval value in milliseconds (TimeIntervalL32)
 */
TASE2_API int32_t
Tase2_DSTransferSet_getInterval(Tase2_DSTransferSet self);
/**
 * \brief Get the TLE (time limit for execution) value
 *
 * \return the TLE value in seconds (TimeIntervalS)
 */
TASE2_API int32_t
Tase2_DSTransferSet_getTLE(Tase2_DSTransferSet self);
/**
 * \brief Get the buffer time (wait time before report is sent)
 *
 * \return the buffer time in seconds (TimeIntervalS)
 */
TASE2_API int32_t
Tase2_DSTransferSet_getBufferTime(Tase2_DSTransferSet self);
/**
 * \brief Get the time interval for integrity checks (Integrity Check)
 *
 * When the integrity check condition is used an integrity report
 * is sent after the timeout elapsed containing the whole data set
 *
 * \return the integrity check value in milliseconds (TimeIntervalL32)
 */
TASE2_API int32_t
Tase2_DSTransferSet_getIntegrityCheck(Tase2_DSTransferSet self);
/**
 * \brief Get the block data flag
 *
 * \return when block data is enabled, false otherwise
 */
TASE2_API bool
Tase2_DSTransferSet_getBlockData(Tase2_DSTransferSet self);
/**
 * \brief Get the critical flag (report acknowledge by client required when set)
 *
 * \return when critical reports are enabled, false otherwise
 */
TASE2_API bool
Tase2_DSTransferSet_getCritical(Tase2_DSTransferSet self);
/**
 * \brief Get the RBE (report by exception) flag
 *
 * \return when RBE is enabled, false otherwise
 */
TASE2_API bool
Tase2_DSTransferSet_getRBE(Tase2_DSTransferSet self);
/**
 * \brief Get the All Changes Reported flag
 *
 * \return when all changes reported is enabled, false otherwise
 */
TASE2_API bool
Tase2_DSTransferSet_getAllChangesReported(Tase2_DSTransferSet self);
/**
 * \brief Get the status of the DS transfer set
 *
 * \return true, when the transfer set is enabled, false otherwise
 */
TASE2_API bool
Tase2_DSTransferSet_getStatus(Tase2_DSTransferSet self);
/**
 * \brief Get the event code requested value
 *
 * \return event code requested value
 */
TASE2_API int16_t
Tase2_DSTransferSet_getEventCodeRequested(Tase2_DSTransferSet self);